--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "",
   "main": "index.js",
   "scripts": {
-    "deploy": "gh-pages -d build/web-application",
-    "build": "npx cross-env TS_NODE_PROJECT=tsconfig.build.json webpack -p --config config/webpack.config.ts",
+    "build": "npx cross-env TS_NODE_PROJECT=tsconfig.build.json webpack --p --configuration production --config config/webpack.config.ts",
+    "deploy": "npx firebase deploy",
     "serve": "npx cross-env TS_NODE_PROJECT=tsconfig.build.json webpack-dev-server --config config/webpack.config.ts"
   },
   "dependencies": {
@@ -21,8 +21,7 @@
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "date-fns": "^2.16.1",
-    "firebase": "^7.21.1",
-    "gh-pages": "^3.1.0",
+    "firebase": "^7.22.0",
     "google-map-react": "^2.1.6",
     "mdi-material-ui": "^6.19.0",
     "react": "^16.13.1",
@@ -62,10 +61,8 @@
     "@types/sass": "^1.16.0",
     "@types/speed-measure-webpack-plugin": "^1.3.0",
     "@types/terser-webpack-plugin": "^3.0.0",
-    "@types/webpack-bundle-analyzer": "^3.8.0",
     "@types/webpack-dev-server": "^3.11.0",
     "@types/workbox-webpack-plugin": "^5.1.4",
-    "@types/worker-plugin": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "autoprefixer": "^9.8.6",
@@ -81,9 +78,10 @@
     "eslint-plugin-sort-keys-fix": "^1.1.1",
     "eslint-webpack-plugin": "^2.1.0",
     "file-loader": "^6.0.0",
+    "firebase-tools": "^8.11.2",
     "fork-ts-checker-webpack-plugin": "^5.0.13",
     "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
+    "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
     "resolve-ts-aliases": "^1.0.1",
